@@ -11,6 +11,9 @@ implying it now has the lock.
 Of course, no multi-threading is implied -- hence the funny interface
 for lock, where a function is called once the lock is aquired.
 """
+from warnings import warnpy3k
+warnpy3k("the mutex module has been removed in Python 3.0", stacklevel=2)
+del warnpy3k
 
 from collections import deque
 
